--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     height: 100vh;
 } */
 #back{
-    background-image: url('/images/bg2.jpg');
+    background-image: url('bg2.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -142,7 +142,7 @@
 .circle:nth-child(2){
     width: 26rem;
     /* max-width: 500px; */
-    background-image: url("/images/tej.jpg");
+    background-image: url("tej.jpg");
     background-size: 100%;
     box-shadow: 0 0 2px #fff,
     inset 0 0 2rem #000;
